       This behavior matches that currently used by IE and Navigator.
    3. No order is guaranteed for parameters from forms, contrary to the HTML 4.01 spec
    4. No parameter validation is done for requests built from links

Limitations: HttpUnit does not support JavaScript

Revision History:

25-Oct-2001 1.2.7

Acknowledgements:
    Thanks to Chris Stevenson for identifying a problem with forms lacking an action
    Thanks to Drew Varner for more sophisticated cookie handling, including Set-Cookie2 code
    Thanks to David Karr for pointing out the problem with status code 3xx responses and
        suggesting a fix for it.
    Thanks to Dave Glowacki for the default content-type code.
    Thanks to Brett Neumeier for some Javadoc fixes and adding support for the non-standard "Charset" header
    Thanks to Richard Scothern for identiying the cause of problems with POST requests and older servlet engines.
    Thanks to Benoit Xhenseval for adding parameter detection in links, handling of meta and link tags,
        and selection of table cells by ID.
    Thanks to Mike Bracewell for noticing the incorrect loopback address in ServletUnitHttpRequest

Problems corrected:
    1. Forms with no action now default to the originating page
    2. cookies with embedded commas and quotes are now handled
    3. Status code 3xx responses no longer result in a null pointer exception when
       invoking getText or reading the input stream.
    4. The _self target now works for forms.
    5. Set-Cookie headers are now processed even on responses with 4xx and 5xx status
    6. WebForm.getOptionValues now returns the options in the order listed in the form for both selections and radio buttons.
    7. The refresh handling now recognizes requests with content syntax "<seconds>;<location>" or "<seconds>; URL=<location>"
    8. The http-equiv meta tag was incorrectly matched as "http_equiv"
    9. By default, POSTs included charset attributes which messed up some servlet engines