@@ -11,6 +11,18 @@ Limitations: HttpUnit does not support JavaScript
 
 Revision History:
 
+ 5-Nov-2001
+
+Acknowledgements:
+    Thanks to Oliver Imbusch for finding and fixing a problem with parsing of encoded link parameter names and values.
+    Thanks to Paul Frantz for finding and fixing a problem with parsing of link parameter names without values.
+
+Problems Fixed:
+    1. Links with parameters whose names were encoded were being mis-parsed
+    2. Links with empty parameter values were being mis-parsed
+    3. All references to TestCase.assert except for one have been renamed to assertTrue in order to prepare for JDK 1.4
+       and JUnit 3.7 compatibility. HttpUnitTestCase implements assertTrue to continue support for JUnit 3.6 and earlier.
+
 25-Oct-2001 1.2.7
 
 Acknowledgements:
